src/test/fun-test/semantic/WideningCast.java.err
Semantic error: type mismatch - expected INT, got DOUBLE, line 3, pos 36
