src/test/fun-test/semantic/WideningCast.java
class Main {
    void main() {
        int foo = (1*2/3 + 4.E1) * 1; // double, нельзя привести типы неявно
    }
}